	  suggested by Jordi)
	- Clarify the error message when writing a temporary file for
	  prepending fails. (DLR)
	- Simplify the routine for closing the file just before we
	  indicate success on the statusbar. (DLR)
  global.c:
  shortcut_init()
	- Change the cursor position display help text to use "display"
	  instead of "show", for consistency. (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
  parse_syntax()
	- Properly generate an error if we've read in a previous syntax
	  without any associated color commands. (DLR)
	- Don't generate an error if we find a duplicate syntax name,
	  since we might be trying to override a syntax in the global
	  nanorc with one in our local nanorc.  Instead, free any
	  duplicate syntaxes we find, so that we always use the last
	  syntax with a given name. (DLR)
  parse_colors()
	- Check for a color command's not following a syntax line before
	  anything else. (DLR)
  do_rcfile()
	- Check for the rcfile's being a directory or device file and
	  reject it if it is, for consistency with file handling
	  elsewhere. (DLR)
	- Remove SYSCONFDIR #ifdef, as SYSCONFDIR should always be set.
	  (DLR)
	- Change all rcfile error messages to refer to commands instead
	  of directives, for consistency with nanorc.5. (DLR)
- configure.ac:
	- Remove old warning about color support. (DLR)
- doc/nano.1, doc/nanorc.5, doc/rnano.1, doc/nano.texi:
	- Update the copyright years to include 2006. (DLR)
	- Explicitly mention that all regexes should be extended regular
	  expressions. (DLR, suggested by John M. Gabriele)
	- Miscellaneous minor fixes. (DLR)
- doc/nano.texi:
	- Change license to GPL, in order to match the rest of the
	  documentation, and because the current license is incompatible
	  with everything else in any case. (DLR)
	- Mention that backup files and spell checking are disabled in
	  restricted mode, as rnano.1 does. (DLR)